# backend/src/infrastructure/controllers/auth.controller.ts
@@ -3,28 +3,21 @@ import { Container } from 'typedi';
 import { RequestWithUser } from '@interfaces/auth.interface';
 import { User } from '@interfaces/users.interface';
 import { AuthService } from '@services/auth.service';
+import { SessionsService } from '@services/sessions.service';
 
 export class AuthController {
   public auth = Container.get(AuthService);
-
-  public signUp = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-    try {
-      const userData: User = req.body;
-      const signUpUserData: User = await this.auth.signup(userData);
-
-      res.status(201).json({ data: signUpUserData, message: 'signup' });
-    } catch (error) {
-      next(error);
-    }
-  };
+  public sessions = Container.get(SessionsService);
 
   public logIn = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
     try {
-      const userData: User = req.body;
-      const { cookie, findUser } = await this.auth.login(userData);
+      const userData: User = {
+        user:  req.headers.user ? req.headers.user.toString() : '',
+        password: req.headers.password ? req.headers.password.toString() : '',
+      };
+      const { token } = await this.auth.login(userData);
 
-      res.setHeader('Set-Cookie', [cookie]);
-      res.status(200).json({ data: findUser, message: 'login' });
+      res.status(200).json({ data: token, message: 'login' });
     } catch (error) {
       next(error);
     }
@@ -32,11 +25,21 @@ export class AuthController {
 
   public logOut = async (req: RequestWithUser, res: Response, next: NextFunction): Promise<void> => {
     try {
-      const userData: User = req.user;
-      const logOutUserData: User = await this.auth.logout(userData);
+      const session = req.session;
+      await this.sessions.closeSession(session.id);
 
-      res.setHeader('Set-Cookie', ['Authorization=; Max-age=0']);
-      res.status(200).json({ data: logOutUserData, message: 'logout' });
+      res.status(200).json({ message: 'logout' });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  getLastSession = async (req: RequestWithUser, res: Response, next: NextFunction): Promise<void> => {
+    try {
+      const sessionId = req.session.id;
+      const session = await this.sessions.getLatestSession(sessionId);
+
+      res.status(200).json({ data: session, message: 'session' });
     } catch (error) {
       next(error);
     }
