# backend/src/infrastructure/middlewares/auth.middleware.ts
@@ -4,6 +4,8 @@ import { SECRET_KEY } from '@/infrastructure/config';
 import { UserEntity } from '@/domain/entities/users.entity';
 import { HttpException } from '@/infrastructure/exceptions/HttpException';
 import { DataStoredInToken, RequestWithUser } from '@/domain/interfaces/auth.interface';
+import { dbDataSource } from '@database';
+import { SessionEntity } from '@/domain/entities/session.entity';
 
 const getAuthorization = req => {
   const coockie = req.cookies['Authorization'];
@@ -20,11 +22,21 @@ export const AuthMiddleware = async (req: RequestWithUser, res: Response, next: 
     const Authorization = getAuthorization(req);
 
     if (Authorization) {
+      const cnx = dbDataSource.manager;
       const { id } = (await verify(Authorization, SECRET_KEY)) as DataStoredInToken;
-      const findUser = await UserEntity.findOne(id, { select: ['id', 'email', 'password'] });
+      const findUser = await cnx.findOne(SessionEntity, {
+        where: { id },
+        select: {
+          id: true,
+          userId: true,
+          logged: true,
+          firstDate: true,
+          lastDate: true,
+        },
+      });
 
       if (findUser) {
-        req.user = findUser;
+        req.session = findUser;
         next();
       } else {
         next(new HttpException(401, 'Wrong authentication token'));
