# backend/src/infrastructure/routes/auth.route.ts
@@ -6,6 +6,7 @@ import { AuthMiddleware } from '@/infrastructure/middlewares/auth.middleware';
 import { ValidationMiddleware } from '@/infrastructure/middlewares/validation.middleware';
 
 export class AuthRoute implements Routes {
+  public path = '/auth';
   public router = Router();
   public auth = new AuthController();
 
@@ -14,8 +15,9 @@ export class AuthRoute implements Routes {
   }
 
   private initializeRoutes() {
-    this.router.post('/signup', ValidationMiddleware(CreateUserDto), this.auth.signUp);
-    this.router.post('/login', ValidationMiddleware(CreateUserDto), this.auth.logIn);
-    this.router.post('/logout', AuthMiddleware, this.auth.logOut);
+    // this.router.post('/signup', ValidationMiddleware(CreateUserDto), this.auth.signUp);
+    this.router.post(`${this.path}/login`, this.auth.logIn);
+    this.router.post(`${this.path}/logout`, AuthMiddleware, this.auth.logOut);
+    this.router.get(`${this.path}/last-sessions`, AuthMiddleware, this.auth.getLastSession);
   }
 }
