# backend/swagger.yaml
@@ -3,6 +3,68 @@ tags:
   description: users API
 
 paths:
+#Auth
+  /auth/login:
+    post:
+      tags:
+      - auth
+      summary: Login
+      parameters:
+      - name: user
+        in: header
+        description: User Name
+        required: true
+
+      - name: password
+        in: header
+        description: User Password
+        required: true
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        500:
+          description: 'Server Error'
+
+  /auth/logout:
+    post:
+      tags:
+      - auth
+      summary: Logout
+      # bearer token
+      security:
+      - Bearer: []
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        500:
+          description: 'Server Error'
+
+  /auth/last-sessions:
+    get:
+      tags:
+      - auth
+      summary: Last Session
+      # bearer token
+      security:
+      - Bearer: []
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        500:
+          description: 'Server Error'
+
 # [GET] users
   /users:
     get:
@@ -404,6 +466,18 @@ definitions:
         type: string
       description:
         type: string
+
+# security definitions
+securityDefinitions:
+  Bearer:
+    type: apiKey
+    name: Authorization
+    in: header
+
+# security
+security:
+  - Bearer: []
+
 schemes:
  - https
  - http
